--- a/index.html
+++ b/index.html
@@ -3,9 +3,20 @@
    <!-- head section contains key page configurations and links
 to other script and css files-->
    <link rel="icon" type="image/x-icon" href="globe.ico">
+   <link rel="stylesheet" type="text/css" href="style.css">
+   <!--
+   <style>
+     h1 {
+        background-color: yellow;
+     }
+   </style>
+   internal style sheet
+   -->
    <title> First Web app</title>
     </head>
-    <body>
+<body>
+  <div>
 
-    </body>
+  </div>
+</body>
 </html>
