--- a/index.html
+++ b/index.html
@@ -15,8 +15,9 @@ to other script and css files-->
    <title> First Web app</title>
     </head>
 <body>
-  <div>
-
+  <div id="header">
+         <h1>Sterling</h1>
+         <h3 id="caption">Caption will be filled here</h3>
   </div>
 </body>
 </html>
