--- a/index.html
+++ b/index.html
@@ -17,7 +17,14 @@ to other script and css files-->
 <body>
   <div id="header">
          <h1>Sterling</h1>
-         <h3 id="caption">Caption will be filled here</h3>
+         <h2 id="caption">Caption will be filled here</h2>
+         <ul>
+            <li>Home</li>
+            <li>Projects</li>
+            <li>Achievements</li>
+            <li>Clients</li>
+            <li>Reach us</li>
+         </ul>
   </div>
   
 </body>
