--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 to other script and css files-->
    <link rel="icon" type="image/x-icon" href="globe.ico">
    <link rel="stylesheet" type="text/css" href="style.css">
+   <link rel="stylesheet" type="text/css" href="layout.css">
    <!--
    <style>
      h1 {
@@ -26,6 +27,13 @@ to other script and css files-->
             <li>Reach us</li>
          </ul>
   </div>
-  
+  <div id="slide-show">
+
+  </div>
+  <div id="content-area">
+     <div id="main-area"></div>
+     <div id="navigation"></div>
+  </div>  
+  <div id="footer"></div>
 </body>
 </html>
