--- a/index.html
+++ b/index.html
@@ -28,7 +28,9 @@ to other script and css files-->
          </ul>
   </div>
   <div id="slide-show">
-
+     <div id="image-area">
+         <img src="">
+     </div>
   </div>
   <div id="content-area">
      <div id="main-area"></div>
