--- a/index.html
+++ b/index.html
@@ -29,7 +29,9 @@ to other script and css files-->
   </div>
   <div id="slide-show">
      <div id="image-area">
-         <img src="">
+         <div id="left-arrow"><img src="images/left.png"></div>
+         <div id="center-imager"><img src="images/tech1.jpg"></div>
+         <div id="left-arrow"><img src="images/left.png"></div>
      </div>
   </div>
   <div id="content-area">
