--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@ to other script and css files-->
   <div id="slide-show">
      <div id="image-area">
          <div id="left-arrow"><img src="images/left.png"></div>
-         <div id="center-imager"><img src="images/tech1.jpg"></div>
-         <div id="left-arrow"><img src="images/left.png"></div>
+         <div id="center-image"><img src="images/tech1.jpg"></div>
+         <div id="right-arrow"><img src="images/right.png"></div>
      </div>
   </div>
   <div id="content-area">
